--- a/css/front.css
+++ b/css/front.css
@@ -108,3 +108,51 @@
     -o-transition: background-position 0.1s linear;
     transition: background-position 0.1s linear;
 }
+
+.cn-modern{
+    background-color: rgba(255, 255, 255, 0.8);
+    color: rgb(0, 0, 0);
+
+    background-image: none;
+    background-origin: padding-box;
+    background-size: auto;
+    border-color: rgba(255, 255, 255, 0.8);
+    border-radius: 4px; 
+    border-radius: 4px;
+    border-style: solid;
+    border-width: 2px;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 12px;
+    font-weight: normal;
+    height: 28px;
+    line-height: 20px;
+    margin-bottom: 0px;
+    padding: 3px 12px;
+    text-align: center;
+    touch-action: manipulation;
+    transition-delay: 0s;
+    transition-duration: 0.1s;
+    transition-property: all;
+    transition-timing-function: ease-in-out;
+    vertical-align: middle;
+    white-space: normal;
+    -webkit-user-select: none;
+}
+
+.cn-modern:hover {
+    background-color: rgba(255, 255, 255, 0.95);
+    border-color: rgba(255, 255, 255, 1);
+    color: rgb(0, 0, 0);
+}
+
+#cn-more-info.cn-modern{
+    background-color: rgba(0, 0, 0, 0);
+    border-color: rgba(255, 255, 255, 0.8); 
+    color: rgba(255, 255, 255, 0.8);
+}
+
+#cn-more-info.cn-modern:hover{
+    border-color: rgba(255, 255, 255, 0.6); 
+    color: rgba(255, 255, 255, 0.95);
+}
