--- a/css/front.css
+++ b/css/front.css
@@ -1,6 +1,4 @@
 #cookie-notice {
-	display: block;
-	visibility: hidden;
 	position: fixed;
 	min-width: 100%;
 	height: auto;
@@ -9,13 +7,44 @@
 	line-height: 20px;
 	left: 0;
 	text-align: center;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
 }
 
-.cn-top {
+#cookie-notice.cn-animated {
+	-webkit-animation-duration: 0.6s;
+	animation-duration: 0.6s;
+	-webkit-animation-fill-mode: both;
+	animation-fill-mode: both;
+}
+
+#cookie-notice.cn-animated.cn-effect-none {
+	-webkit-animation-duration: 0s;
+	animation-duration: 0s;
+}
+
+#cookie-notice .cookie-notice-container {
+	display: block;
+}
+
+#cookie-notice.cookie-notice-hidden .cookie-notice-container {
+	display: none;
+}
+
+#cookie-notice .cookie-revoke-container {
+	display: block;
+}
+
+#cookie-notice.cookie-revoke-hidden .cookie-revoke-container {
+	display: none;
+}
+
+.cn-position-top {
 	top: 0;
 }
 
-.cn-bottom {
+.cn-position-bottom {
 	bottom: 0;
 }
 
@@ -23,25 +52,13 @@
 	padding: 10px;
 	text-align: center;
 	width: 100%;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
+	z-index: 2;
 }
 
-.cookie-notice-revoke-container {
-	position: absolute;
-	bottom: 0;
+.cookie-revoke-container {
+	padding: 10px;
 	width: 100%;
 	z-index: 1;
-	visibility: hidden;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-}
-
-.cn-top .cookie-notice-revoke-container {
-	top: 0;
-	bottom: auto;
 }
 
 #cookie-notice .cn-revoke-cookie {
@@ -68,7 +85,6 @@
 	border-color: #BBB;
 	color: #333;
 	text-shadow: 0 1px 0 #FFF;
-	-moz-box-sizing: border-box;
 	border-radius: 3px 3px 3px 3px;
 	border-style: solid;
 	border-width: 1px;
@@ -139,6 +155,50 @@
 	transition: background-position 0.1s linear;
 }
 
+#cookie-notice.cookie-notice-visible.cn-effect-none,
+#cookie-notice.cookie-revoke-visible.cn-effect-none {
+	-webkit-animation-name: fadeIn;
+	animation-name: fadeIn;
+}
+
+#cookie-notice.cn-effect-none {
+	-webkit-animation-name: fadeOut;
+	animation-name: fadeOut;
+}
+
+#cookie-notice.cookie-notice-visible.cn-effect-fade,
+#cookie-notice.cookie-revoke-visible.cn-effect-fade {
+	-webkit-animation-name: fadeIn;
+	animation-name: fadeIn;
+}
+
+#cookie-notice.cn-effect-fade {
+	-webkit-animation-name: fadeOut;
+	animation-name: fadeOut;
+}
+
+#cookie-notice.cookie-notice-visible.cn-effect-slide,
+#cookie-notice.cookie-revoke-visible.cn-effect-slide{
+	-webkit-animation-name: slideInUp;
+	animation-name: slideInUp;
+}
+
+#cookie-notice.cn-effect-slide {
+	-webkit-animation-name: slideOutDown;
+	animation-name: slideOutDown;
+}
+
+#cookie-notice.cookie-notice-visible.cn-position-top.cn-effect-slide,
+#cookie-notice.cookie-revoke-visible.cn-position-top.cn-effect-slide {
+	-webkit-animation-name: slideInDown;
+	animation-name: slideInDown;
+}
+
+#cookie-notice.cn-position-top.cn-effect-slide {
+	-webkit-animation-name: slideOutUp;
+	animation-name: slideOutUp;
+}
+
 @media all and (max-width: 900px) {
 	.cookie-notice-container #cn-notice-text {
 		display: block;
@@ -148,4 +208,148 @@
 		margin-left: 5px;
 		margin-right: 5px;
 	}
+}
+
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
+  }
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
+  }
+}
+
+@-webkit-keyframes slideInUp {
+  from {
+    -webkit-transform: translate3d(0, 100%, 0);
+    transform: translate3d(0, 100%, 0);
+    visibility: visible;
+  }
+
+  to {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+@keyframes slideInUp {
+  from {
+    -webkit-transform: translate3d(0, 100%, 0);
+    transform: translate3d(0, 100%, 0);
+    visibility: visible;
+  }
+
+  to {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+@-webkit-keyframes slideOutDown {
+  from {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+
+  to {
+    visibility: hidden;
+    -webkit-transform: translate3d(0, 100%, 0);
+    transform: translate3d(0, 100%, 0);
+  }
+}
+
+@keyframes slideOutDown {
+  from {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+
+  to {
+    visibility: hidden;
+    -webkit-transform: translate3d(0, 100%, 0);
+    transform: translate3d(0, 100%, 0);
+  }
+}
+
+@-webkit-keyframes slideInDown {
+  from {
+    -webkit-transform: translate3d(0, -100%, 0);
+    transform: translate3d(0, -100%, 0);
+    visibility: visible;
+  }
+
+  to {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+@keyframes slideInDown {
+  from {
+    -webkit-transform: translate3d(0, -100%, 0);
+    transform: translate3d(0, -100%, 0);
+    visibility: visible;
+  }
+
+  to {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+@-webkit-keyframes slideOutUp {
+  from {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+
+  to {
+    visibility: hidden;
+    -webkit-transform: translate3d(0, -100%, 0);
+    transform: translate3d(0, -100%, 0);
+  }
+}
+
+@keyframes slideOutUp {
+  from {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+
+  to {
+    visibility: hidden;
+    -webkit-transform: translate3d(0, -100%, 0);
+    transform: translate3d(0, -100%, 0);
+  }
 }
