--- a/css/front.css
+++ b/css/front.css
@@ -1,6 +1,7 @@
 #cookie-notice {
 	position: fixed;
-	min-width: 100%;
+	min-width: 99%%;
+	max-width:100%;
 	height: auto;
 	z-index: 100000;
 	font-size: 13px;
